
[project]
name = "pydar-utils"
version = "0.0.1"
description = "A python package for pratica object detection, when those objects are trees"
readme = "README.md"
dependencies = [
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "plotly==5.24.1",
    "pyqt5-qt5==5.15.15",
    "pyqt5==5.15.11",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
]

